--- a/Network1/pom.xml
+++ b/Network1/pom.xml
@@ -72,5 +72,15 @@
     <artifactId>jackson-databind</artifactId>
     <version>2.4.1</version>
 </dependency>
+<dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-core</artifactId>
+      <version>1.11.256 </version>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-dynamodb</artifactId>
+      <version>1.11.256 </version>
+    </dependency>
 	</dependencies>
 </project>
