--- a/Network1/pom.xml
+++ b/Network1/pom.xml
@@ -70,17 +70,22 @@
 <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
-    <version>2.4.1</version>
+    <version>2.5.3</version>
 </dependency>
 <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-core</artifactId>
-      <version>1.11.256 </version>
+      <version>1.11.748 </version>
     </dependency>
+    <dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk</artifactId>
+    <version>1.11.748</version>
+</dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-dynamodb</artifactId>
-      <version>1.11.256 </version>
+      <version>1.11.748 </version>
     </dependency>
 	</dependencies>
 </project>
