--- a/Network1/.classpath
+++ b/Network1/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src">
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -14,30 +14,11 @@
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_201">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/SayaliGirish/.m2/repository/com/amazonaws/aws-java-sdk-core/1.11.256/aws-java-sdk-core-1.11.256.jar" sourcepath="C:/Users/SayaliGirish/.m2/repository/com/amazonaws/aws-java-sdk-core/1.11.256/aws-java-sdk-core-1.11.256-sources.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="maven.groupId" value="com.amazonaws"/>
-			<attribute name="maven.artifactId" value="aws-java-sdk-core"/>
-			<attribute name="maven.version" value="1.11.256"/>
-			<attribute name="maven.scope" value="compile"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/SayaliGirish/.m2/repository/com/amazonaws/aws-java-sdk-dynamodb/1.11.256/aws-java-sdk-dynamodb-1.11.256.jar" sourcepath="C:/Users/SayaliGirish/.m2/repository/com/amazonaws/aws-java-sdk-dynamodb/1.11.256/aws-java-sdk-dynamodb-1.11.256-sources.jar">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="maven.groupId" value="com.amazonaws"/>
-			<attribute name="maven.artifactId" value="aws-java-sdk-dynamodb"/>
-			<attribute name="maven.version" value="1.11.256"/>
-			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
